[Classic] Auth: Fix logo flickering (#9697)

--- a/src/components/auth/Auth.module.scss
+++ b/src/components/auth/Auth.module.scss
@@ -131,7 +131,7 @@ $footerPaddingBottomMin: 1rem;
   }
 
   &ReadyToScale {
-    @include mixins.transition('transform 150ms', !important);
+    @include mixins.transition('opacity 1s ease, transform 150ms', !important);
   }
 }
 
